Add volatile transactions to datashard internal ui

--- a/ydb/core/tx/datashard/ui/index.html
+++ b/ydb/core/tx/datashard/ui/index.html
@@ -93,6 +93,10 @@
                     <td class="ds-info">Change sender</td>
                     <td class="ds-info" id="tablet-info-change-sender">Loading...</td>
                   </tr>
+                  <tr class="ds-info">
+                    <td class="ds-info">Volatile txs</td>
+                    <td class="ds-info" id="tablet-info-volatile-txs">Loading...</td>
+                  </tr>
                 </tbody>
               </table>
               <table class="ds-info">
@@ -300,6 +304,18 @@
               </tr>
             </thead>
             <tbody id="ds-delayed-ack-body">
+            </tbody>
+          </table>
+          <table id="ds-rs-expectations-table" class="tablesorter">
+            <caption class="ds-info">Expectations</caption>
+            <thead>
+              <tr>
+                <th>TxId</th>
+                <th>Step</th>
+                <th>Source</th>
+              </tr>
+            </thead>
+            <tbody id="ds-rs-expectations-body">
             </tbody>
           </table>
         </div>
